# Kryptos

./: .gitignore  HANDOFF.md  README.md  RESEARCH_SUMMARY.md  constraint_first_sweep.py  cryptos_conundrum_book.md  deep_sweep_19_18.py  exhaustive_key_search.py  generate_k4_dictionary.py  gpu_opencl_suite.py  k4_analyzer.py  kryptos_deluxe_suite.mojo  kryptos_info.md  kryptos_k4_solving_plan.md  kryptos_research_notes.md  kryptos_toolkit.py  linux_native_suite.mojo  pyproject.toml  strategy10_fractionation.py  strategy11_corpus_running_key.py  strategy12_periodic_transposition_hillclimb.py  strategy13_hybrid_pipeline_search.py  strategy14_displacement_route_search.py  strategy15_transposition_enumeration.py  strategy16_sat_elimination.py  strategy17_method_elimination.py  strategy18_alternating_optimization.py  strategy19_mcmc_search.py  strategy1_quagmire.py  strategy20_generalized_ic.py  strategy21_gromark.py  strategy22_ml_cipher_classification.py  strategy23_bayesian_analysis.py  strategy24_neural_scoring.py  strategy25_alt_substitution_sweep.py  strategy26_latitude_investigation.py  strategy27_key_derivation.py  strategy28_digraphic_sweep.py  strategy29_dictionary_scoring.py  strategy2_matrix.py  (+25 more)
docs/: engineering-roadmap.md  index.html  plan.md  release-summary.md  research-new-methods-2026-03.md  script.js  styles.css
kryptos/: __init__.py  benchmark_cli.py  benchmark_compare.py  benchmarking.py  catalog.py  colab.py  common.py  constants.py  corpora.py  dashboard.py  ledger.py  models.py  paths.py  runtime.py  source_material.py  standalone_bridge.py  transposition.py
notebooks/: kryptos_colab_ai_workbench.ipynb
runs/: alt_substitution_sweep.json  anchor_sensitivity.json  benchmark_comparison.json  carter_diary_deep.json  carter_diary_full.json  carter_journals_exhaustive.json  colab_workbench_config.json  constraint_first_deep.json  cpu_strategy_default.json  cpu_strategy_default_latest.json  cpu_strategy_smoke.json  crib_dragging.json  (+34 more)
(+22 files in other folders)
